actualización 2 corrección en ortografia

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     
     <!--====== Title ======-->
-    <title>Soluciones Tecnológica GT</title>
+    <title>Soluciones Tecnológica GT </title>
     
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -152,10 +152,10 @@
                             <div class="col-lg-6">
                                 <div class="slider-content">
                                     <h1 class="title">¿Emprendes? Digitalizate </h1>
-                                    <p class="text">Te apoyamos a digitalizar tu emprendimiento, asesorias y seguimiento para digitalizar tú idea.</p>
+                                    <p class="text">Te apoyamos a digitalizar tu emprendimiento, asesorias y seguimiento para digitalizar tu idea.</p>
                                     <ul class="slider-btn rounded-buttons">
                                         <li><a class="main-btn rounded-one" style="background-color: #00bb2d ; color:white;" target="_blank" href="https://wa.me/55452704">Whatsapp</a></li>
-                                        <li><a class="main-btn rounded-two" data-toggle="modal" data-target="#exampleModal">Asesoria</a></li>
+                                        <li><a class="main-btn rounded-two" data-toggle="modal" data-target="#exampleModal">Asesoría</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -177,7 +177,7 @@
                                     <p class="text">Te asesoramos y apoyamos en publicar tu primer aplicación en la nube, servicio web, o cualquier proyecto digital.</p>
                                     <ul class="slider-btn rounded-buttons">
                                          <li><a class="main-btn rounded-one" style="background-color: #00bb2d ; color:white;" target="_blank" href="https://wa.me/55452704">Whatsapp</a></li>
-                                        <li><a class="main-btn rounded-two" data-toggle="modal" data-target="#exampleModal">Asesoria</a></li>
+                                        <li><a class="main-btn rounded-two" data-toggle="modal" data-target="#exampleModal">Asesoría</a></li>
                                     </ul>
                                 </div> <!-- slider-content -->
                             </div>
@@ -199,7 +199,7 @@
                                     <p class="text">Brindamos asesorias para agilizar tus proyectos haciendo uso de las metodologías más usadas SCRUM,Extreme Programing XP, control de versiones de proyectos, primeros pasos en programación, y mucho más. </p>
                                     <ul class="slider-btn rounded-buttons">
                                          <li><a class="main-btn rounded-one" style="background-color: #00bb2d ; color:white;" target="_blank" href="https://wa.me/55452704">Whatsapp</a></li>
-                                        <li><a class="main-btn rounded-two" data-toggle="modal" data-target="#exampleModal">Asesoria</a></li>
+                                        <li><a class="main-btn rounded-two" data-toggle="modal" data-target="#exampleModal">Asesoría</a></li>
                                     </ul>
                                 </div> <!-- slider-content -->
                             </div>
@@ -260,7 +260,7 @@
                             </div>
                         </div>
                         <div class="features-content">
-                            <p class="text">¿Quieres que tu emprendimiento o empresa aparezca en internet nosotros te apoyamos, nosotros hacemos todo para que tus clientes te localicen en internet o si ya tienes un proyecto y quieres apoyo o asesoria estamos para apoyarte haz clic en </u>. </p>
+                            <p class="text">¿Quieres que tu emprendimiento o empresa aparezca en internet nosotros te apoyamos, nosotros hacemos todo para que tus clientes te localicen en internet o si ya tienes un proyecto y quieres apoyo o asesoría estamos para apoyarte haz clic en </u>. </p>
                   <a class="features-btn" href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Quiero Apoyo</a>
                 </div>
                     </div> <!-- single features -->
@@ -276,7 +276,7 @@
                             </div>
                         </div>
                         <div class="features-content">
-                            <p class="text">Tienes ya una aplicación que necesite rediseño o matenimiento; o quieres una aplicación para tu emprendimiento o empresa te apoyamos con asesoria y acompañamiento has clic en <u>"Quiero apoyo"</u>.</p>
+                            <p class="text">Tienes ya una aplicación que necesite rediseño o matenimiento; o quieres una aplicación para tu emprendimiento o empresa te apoyamos con asesoría y acompañamiento has clic en <u>"Quiero apoyo"</u>.</p>
                         <a class="features-btn" href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Quiero Apoyo</a>
                         </div>
                     </div> <!-- single features -->
@@ -291,7 +291,7 @@
                             </div>
                         </div>
                         <div class="features-content">
-                            <p class="text">Te apoyamos a buscar y administrar tus dominios y certificados de seguridad, para que tus sitios o aplicaciones permanezcan en internet, si quieres asesoria porque ya tienes una aplicación y no sabes como realizar este proceso estamos para ayudarte haz clic en <u>"Quiero apoyo"</u>.</p>
+                            <p class="text">Te apoyamos a buscar y administrar tus dominios y certificados de seguridad, para que tus sitios o aplicaciones permanezcan en internet, si quieres asesoría porque ya tienes una aplicación y no sabes como realizar este proceso estamos para ayudarte haz clic en <u>"Quiero apoyo"</u>.</p>
                          <a class="features-btn" href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Quiero Apoyo</a>
                         </div>
                     </div> <!-- single features -->
@@ -431,7 +431,7 @@
                 <div class="col-lg-5">
                     <div class="faq-content mt-45">
                         <div class="about-title">
-                            <h6 class="sub-title">Asesoria</h6>
+                            <h6 class="sub-title">Asesoría</h6>
                             <h4 class="title">Preguntas Frecuentes<br> Sobre los proyectos:</h4>
                         </div> <!-- faq title -->
                         <div class="about-accordion">
@@ -443,7 +443,7 @@
 
                                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            <p class="text">Claro que si el objetivo es apoyarte en hacer realidad tus proyectos, ningún proyecto es menor o superior, cada uno merece de la atención y asesoria personalizada.</p>
+                                            <p class="text">Claro que si el objetivo es apoyarte en hacer realidad tus proyectos, ningún proyecto es menor o superior, cada uno merece de la atención y asesoría personalizada.</p>
                                         </div>
                                     </div> 
                                 </div> <!-- card -->
@@ -453,7 +453,7 @@
                                     </div>
                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            <p class="text">El objetivo es apoyar tu emprendimiento, la asesoria te permite conocer el proceso que debe pasar tu proyecto para hacerce realidad. Haz tú cita podemos apoyarte y acompañarte durante todo el proceso de tu proyecto.</p>
+                                            <p class="text">El objetivo es apoyar tu emprendimiento, la asesoría te permite conocer el proceso que debe pasar tu proyecto para hacerce realidad. Haz tú cita podemos apoyarte y acompañarte durante todo el proceso de tu proyecto.</p>
                                         </div>
                                     </div>
                                 </div> <!-- card -->
